mplot 1.0.3 [2019-02-13]
------------------------

* Fix for plot.bglmnet with min.prob in mplot
* Resolve warning messages around exporting objects


mplot 1.0.2 [2019-01-22]
------------------------

* Compatibility update with a new version of dplyr.


mplot 1.0.0 [2018-02-13]
------------------------

* Version 1.0.0 release to coincide with appearance of
  Journal of Statistical Software article.
* Documentation updates.
* Examples simplified so that run time of each is <5 seconds


mplot 0.8.2 [2017-11-26]
------------------------

* The bglmnet function has been been re-written
* Added boot_size plot option for bglmnet objects
* Vignettes removed, replaced with pkgdown website


mplot 0.8.1 [2017-11-18]
------------------------

* More sensible nbest parameter behaviour in the vis function. 
  Now nbest = "all" reverts back to nbest = 1 for models with 
  more than 15 parameters.  This can be overridden by specifying 
  an integer, rather than specifying "all".  For large model sizes, 
  if the number specified is too large, it will lead to memory 
  overruns and failures with dependent packages.
* Fixed vignette/pkgdown issue where there were multiple 
  vignettes created with the same name.


mplot 0.8.0 [2017-11-03]
------------------------

* Random seed parameter for reproducible results
* New website
* Small fixes for JSS article (e.g. googleVis axis padding)


mplot 0.7.8 [2016-08-17]
------------------------

* reimplemented classic plots in ggplot2
* classic plots are now default (reviewer feedback)
* improved documentation
    - more detail about procedures
    - more detail about plotting methods
* fixed the passing of weights for weighted models
* can now obtain full loss v dimension which="lvk"
  plots for glms
* vis() default is now nbest="all".
* experimental support for glmulti as a backend
  instead of bestglm for glms for the vis function.
  This enables users to enforce marginality constraints.

mplot 0.7.6 [2016-05-20]