@@ -1,7 +1,7 @@
 Package: mplot
 Type: Package
 Title: Graphical Model Stability and Variable Selection Procedures
-Version: 1.0.4
+Version: 1.0.5
 Date: 2020-02-15
 Authors@R: c(person("Garth", "Tarr", role = c("aut", "cre"), email = "garth.tarr@gmail.com", comment = c(ORCID = "0000-0002-6605-7478")), person("Samuel", "Mueller", role = "aut", email = "samuel.mueller@sydney.edu.au", comment = c(ORCID = "0000-0002-3087-8127")), person("Alan H", "Welsh", role = "aut", email = "alan.welsh@anu.edu.au", comment = c(ORCID = "0000-0002-3165-9559")))
 Description: Model stability and variable inclusion plots [Mueller and Welsh
